<resources>
    <string name="app_name">Nutri-ScoreBasedApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sign Up Screen -->
    <string name="signup_title">Sign Up</string>
    <string name="signup_subtitle">Create your new account</string>
    <string name="signup_full_name_hint">Full Name</string>
    <string name="signup_email_hint">Email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_reenter_password_hint">Re-enter Password</string>
    <string name="signup_create_account_button">Create Account</string>
    <string name="signup_already_have_account">Already have an account?</string>
    <string name="signup_sign_in">Sign In</string>
    
    <!-- Splash Screen -->
    <string name="app_logo_description">NutriScore application logo</string>

    <!-- Sign In Screen -->
    <string name="signin_welcome_back">Welcome back!</string>
    <string name="signin_login_subtitle">Login in to continue</string>
    <string name="signin_forgot_password">Forgot Password?</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_password_hint">Password</string>
    <string name="signin_no_account">Dont have an account?</string>
    <string name="signin_sign_up">Sign Up</string>
    <string name="signin_login_button">Logın</string>

    <!-- Login Screen -->
    <string name="login_continue_as_guest">Contınue as Guest</string>
    <string name="login_login_button">Logın</string>
    <string name="login_sign_up">Sıgn Up</string>



</resources>